--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 line-bot-sdk
 flask
+Python >=3.8
 numpy>=1.7.1
 inheritance>=0.1.3
 geneimpacts>=0.1.3
@@ -22,5 +23,5 @@ Unidecode>=0.04.14
 cyordereddict==0.2.2
 bcolz>=0.11.3
 numexpr>=2.4.3
-gemini==0.19.1
+gemini
 gunicorn
